  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay, PicoCentauri, orbeckst, hmacdope, rmeli, miss77jun, rzhao271

 * 2.3.0

Fixes
  * Fixes awk call in deploy.yaml tests for macos runners (Issue #3693)
  * add a 0.5 for correct midpoints in hole analysis (Issue #3715)

Enhancements
  * Add a new `formalcharge` attribute for storing formal charges (PR #3755)
  * Add the ability to read & write formal charges from PDB files (PR #3755)
  * Change functions in `lib.distances` to accept AtomGroups as well as NumPy
    arrays (CZI Performance track PR #3730)
  * Add `norm` parameter to InterRDF, InterRDF_s to normalize as rdf,
    number density or do not normalize at all. (Issue #3687)
  * Additional logger.info output when per-frame analysis starts (PR #3710)
  * Timestep has been converted to a Cython Extension type
    (CZI Performance track, PR #3683)

Changes
  * To add additional optional packages for different file formats when
    using `pip` use the new "extra_formats" extras_require target as in
    `pip install ./package[extra_formats]` (Issue #3701, PR #3711)
  * Minimum supported NumPy version is now 1.20 (1.21 for macosx-arm64)
    as per NEP29 (PR #3737)
  * Narrowed variable scope to reduce use of OpenMP `private` clause (PR #3706, PR
    #3728)

Deprecations
  * The extras_requires target "AMBER" for `pip install ./package[AMBER]`
    will be removed in 2.4. Use "extra_formats". (Issue #3701, PR #3711)
  * Deprecate `density` parameter in favor of `norm` in InterRDF_s
    (Issue #3687)


06/01/22 IAlibay, BFedder, inomag, Agorfa, aya9aladdin, shudipto-amin, cbouy,