@@ -1,0 +1,11 @@
+ATOM      1  N   PRO A   1     -12.735  38.918  31.287  1.00 39.83           N  
+ATOM      2  CA  PRO A   1     -12.709  39.097  29.830  1.00 39.29           C  
+ATOM      3  C   PRO A   1     -13.575  38.051  29.162  1.00 39.78           C  
+ATOM      4  O   PRO A   1     -14.097  37.126  29.753  1.00 38.67           O  
+ATOM      5  CB  PRO A   1     -11.243  39.010  29.398  1.00 37.79           C  
+ATOM      6  CG  PRO A   1     -10.636  38.128  30.469  1.00 38.69           C  
+ATOM      7  CD  PRO A   1     -11.368  38.593  31.729  1.00 37.10           C  
+ATOM      8  H2  PRO A   1     -13.142  39.756  31.758  0.00 15.00           H  
+ATOM      9  H3  PRO A   1     -13.429  38.158  31.502  0.00 15.00           H  
+CONECT100000100001100002
+END
